--- a/node-assignment2/package.json
+++ b/node-assignment2/package.json
@@ -12,9 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "store": "^2.0.12"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
